--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/material": "^7.3.6",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-draggable": "^4.5.0",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
