--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-draggable": "^4.5.0",
-    "recharts": "^3.6.0",
-    "socket.io-client": "^4.8.1"
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
