--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "mongoose": "^9.1.1",
     "next": "16.1.1",
     "react": "19.2.3",
