--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/material": "^7.3.6",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
+    "bcryptjs": "^3.0.3",
     "mongoose": "^9.1.1",
     "next": "16.1.1",
+    "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-draggable": "^4.5.0",
