--- a/server/package.json
+++ b/server/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "nodemon": "^3.1.9",
     "socket.io": "^4.8.1"
   },
-  "description": ""
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
